2007-11-06 Mark Grondona <mgrondona@llnl.gov>

	* src/etc/labels.db : Add Dell PowerEdge 1850 and Asus A85NX, A8N-E,
	  and "KFN5-D SLI" to labels database.

	* src/util/edac-ctl.in : Allow parsing of `lspci -n` output without
	  "Class" string (lspci 2.2.3).

	* : tag v0.11.

2007-10-12 Mark Grondona <mgrondona@llnl.gov>

	* debian/ : Remove debian directory as requested by 
	  Yaroslav Halchenko <debian at onerussian.com>

2007-06-29 Mark Grondona <mgrondona@llnl.gov>

	* edac-utils.spec : sysfsutils-devel was renamed libsysfs-devel
	  in RHEL5 - update BuildRequires.

	* src/util/edac-ctl.in : Find paths to lspci, dmidecode, and
	  modprobe at runtime using PATH.

	* : tag v0.10.

2007-06-20 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl : Removed.

	* src/util/edac-ctl.in : Added. edac-ctl is now built from
	  edac-ctl.in in order to get the correct value for
	  sysconfdir.

	* src/etc/edac.init : Removed.

	* src/etc/edac.init.in : Added. edac.init is now built
	  from edac-init.in in order to substitute values for
	  prefix, exec_prefix, and sbindir.

	* configure.ac : Modifications needed to build the above.
	  Fix declaration of PACKAGE and VERSION.

	* Makefile.am, src/etc/Makefile.am : Fixes needed for
	  'make distcheck'

2007-06-08 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl :
	  Allow for empty labels in --print-labels.

2007-06-05 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-ctl :
	  Allow for whitespace in MB model name.

2007-05-07 Mark Grondona <mgrondona@llnl.gov>
	* src/lib/edac.3.in, src/util/edac-util.1.in, 
	  src/util/edac-ctl.8.in :
	  Add manpages for libedac, edac-util, and edac-ctl.

	* src/lib/Makefile.am, src/util/Makefile.am,
	  configure.ac : Changes for new manpages.

	* : tag version 0.9.

2007-05-07 Mark Grondona <mgrondona@llnl.gov>

	* : Added official UCRL number.

2007-04-25 Mark Grondona <mgrondona@llnl.gov>

	* src/util/edac-util.c : Issue "No errors to report." message to
	  stdout, not stderr.