@@ -1,3 +1,8 @@
+2008-01-25 Mark Grondona <mgrondona@llnl.gov>
+
+	* src/lib/libedac.c (edac_totals_refresh) :
+	  Fix unchecked return code as found by Coverity.
+
 2007-11-06 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/etc/labels.db : Add Dell PowerEdge 1850 and Asus A85NX, A8N-E,
